add CableHUB pinout

--- a/docs/product/90a0.rst
+++ b/docs/product/90a0.rst
@@ -4,8 +4,19 @@
 YSC-90A0
 ========
 
-Back of the controller
+Specifications summary
 ======================
+
+- Independent control box;
+- AC 220v±10%;
+- 10 solenoid outputs;
+
+
+Controller Connectors
+======================
+
+Back Panel 
+----------
 
 .. image:: ../_static/90a0/backcover.svg
    :scale: 66 %
@@ -13,13 +24,16 @@ Back of the controller
    :align: center
 
 
-Pin definition
-==============
+Interface Pinout
+----------------
 
 M1
---------
+****
+
+Motor Power.
+
 +-----------------------------------+-----+------------+
-| Symbol                            | Pin | Meaning    |
+| Interface                         | Pin | Define     |
 +===================================+=====+============+
 | .. image:: ../_static/90a0/M1.svg | 1   | EARTH      |
 +    :scale: 100 %                  +-----+------------+
@@ -31,9 +45,12 @@ M1
 +-----------------------------------+-----+------------+
 
 M1.1
---------
+****
+
+Motor encoder.
+
 +-------------------------------------+-----+------------+
-| Symbol                              | Pin | Meaning    |
+| Interface                           | Pin | Define     |
 +=====================================+=====+============+
 | .. image:: ../_static/90a0/M1-1.svg | 1   | GND        |
 +    :scale: 400 %                    +-----+------------+
@@ -55,9 +72,12 @@ M1.1
 +-------------------------------------+-----+------------+
 
 PANEL
---------
+*****
+
+Panel。
+
 +--------------------------------------+-----+------------+
-| Symbol                               | Pin | Meaning    |
+| Interface                            | Pin | Define     |
 +======================================+=====+============+
 | .. image:: ../_static/90a0/PANEL.svg | 1   |            |
 +    :scale: 400 %                     +-----+------------+
@@ -79,9 +99,12 @@ PANEL
 +--------------------------------------+-----+------------+
 
 PEDAL
---------
+*****
+
+Pedal.
+
 +--------------------------------------+-----+------------+------------+------------+
-| Symbol                               | Pin | Normal     | Standing   | SPI        |
+| Interface                            | Pin | Normal     | Standing   | SPI        |
 +======================================+=====+============+============+============+
 | .. image:: ../_static/90a0/pedal.svg | 1   | GND        | GND        | GND        |
 +    :scale: 400 %                     +-----+------------+------------+------------+
@@ -103,9 +126,12 @@ PEDAL
 +--------------------------------------+-----+------------+------------+------------+
 
 X100
---------
+****
+
+Expansion signal port.
+
 +--------------------------------------+-----+------------+
-| Symbol                               | Pin | Normal     |
+| Interface                            | Pin | Normal     |
 +======================================+=====+============+
 | .. image:: ../_static/90a0/X100.svg  | 1   | EXT-SYNC   |
 +    :scale: 400 %                     +-----+------------+
@@ -127,9 +153,12 @@ X100
 +--------------------------------------+-----+------------+
 
 X101
---------
+****
+
+Signal port.
+
 +-------------------------------------+-----+-------------------+-----+-------------------+
-| Symbol                              | Pin | Meaning           | Pin | Meaning           |
+| Interface                           | Pin | Define            | Pin | Define            |
 +=====================================+=====+===================+=====+===================+
 | .. image:: ../_static/90a0/X101.svg | 1   | VCC               | 14  | CHA2              |
 +    :scale: 400 %                    +-----+-------------------+-----+-------------------+
@@ -159,9 +188,12 @@ X101
 +-------------------------------------+-----+-------------------+-----+-------------------+
 
 X200
---------
+****
+
+Solenoid (valve) output port.
+
 +-------------------------------------+-----+-------------------+-----+-------------------+
-| Symbol                              | Pin | Meaning           | Pin | Meaning           |
+| Interface                           | Pin | Define            | Pin | Define            |
 +=====================================+=====+===================+=====+===================+
 | .. image:: ../_static/90a0/X200.svg | 1   | DC31v             | 14  | Output-04         |
 +    :scale: 400 %                    +-----+-------------------+-----+-------------------+
@@ -189,3 +221,265 @@ X200
 +                                     +-----+-------------------+-----+-------------------+
 |                                     | 13  | Output-03         | 26  | Output-08         |
 +-------------------------------------+-----+-------------------+-----+-------------------+
+
+CableHUB Connectors(B35-8A)
+===========================
+
+Interface on the HUB
+---------------------
+
+.. image:: ../_static/90a0/hub8A/hub8A.png
+   :scale: 100
+   :alt: 控制器后板
+   :align: center
+
+Interface Pinout(to controller)
+-------------------------------
+
+J11
+****
+
+Connect to X200.
+
++------------------------------------------+-----+------------+-----+------------+
+| Interface                                | Pin | Define     | Pin | Define     |   
++==========================================+=====+============+=====+============+
+| .. image:: ../_static/90a0/hub8a/J11.png | 1   | Output-04  | 2   | Output-04  |
++    :scale: 100 %                         +-----+------------+-----+------------+
+|                                          | 3   | Output-05  | 4   | Output-05  |
++                                          +-----+------------+-----+------------+
+|                                          | 5   | Output-06  | 6   | Output-06  |
++                                          +-----+------------+-----+------------+
+|                                          | 7   | Output-07  | 8   | Output-07  |
++                                          +-----+------------+-----+------------+
+|                                          | 9   | Output-10  | 10  | Output-10  |
++                                          +-----+------------+-----+------------+
+|                                          | 11  | Output-09  | 12  | Output-09  |
++                                          +-----+------------+-----+------------+
+|                                          | 13  | Output-08  | 14  | Output-08  |
++------------------------------------------+-----+------------+-----+------------+
+
+J14
+****
+
+Connect to X200.
+
++------------------------------------------+-----+------------+-----+------------+
+| Interface                                | Pin | Define     | Pin | Define     |   
++==========================================+=====+============+=====+============+
+| .. image:: ../_static/90a0/hub8a/J14.png | 1   | DC31v      | 2   | DC31v      |
++    :scale: 100 %                         +-----+------------+-----+------------+
+|                                          | 3   | DC31v      | 4   | DC31v      |
++                                          +-----+------------+-----+------------+
+|                                          | 5   | Output-02  | 6   | Output-02  |
++                                          +-----+------------+-----+------------+
+|                                          | 7   | Output-01  | 8   | Output-02  |
++                                          +-----+------------+-----+------------+
+|                                          | 9   | Output-01  | 10  | Output-01  |
++                                          +-----+------------+-----+------------+
+|                                          | 11  | Output-03  | 12  | Output-03  |
++------------------------------------------+-----+------------+-----+------------+
+
+J12
+****
+
+Connect to X101.
+
++------------------------------------------+-----+-------------------+-----+-------------------+
+| Interface                                | Pin | Define            | Pin | Define            |
++==========================================+=====+===================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J12.png | 1   | Input-01(digital) | 2   | Input-07(analog)  |
++    :scale: 100 %                         +-----+-------------------+-----+-------------------+
+|                                          | 3   | Input-10(analog)  | 4   | Input-05(digital) |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 5   | Input-09(analog)  | 6   | Input-03(digital) |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 7   | CHB2              | 8   | Input-06(digital) |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 9   | CHA2              | 10  | Input-08(analog)  |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 11  |                   | 12  | GND               |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 13  | DC12v             | 14  | DC12v             |
++------------------------------------------+-----+-------------------+-----+-------------------+
+
+J15
+****
+
+Connect to X101.
+
++------------------------------------------+-----+-------------------+-----+-------------------+
+| Interface                                | Pin | Define            | Pin | Define            |
++==========================================+=====+===================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J15.png | 1   | VCC               | 2   | Machine ID-SCL    |
++    :scale: 100 %                         +-----+-------------------+-----+-------------------+
+|                                          | 3   | Machine ID-SDA    | 4   | Input-02(digital) |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 5   | Input-04(digital) | 6   | Keypad-KEY        |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 7   | ElecHandWheel-CHB | 8   | Keypad-CLK        |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 9   | ElecHandWheel-CHA | 10  | Keypad-LOCK       |
++                                          +-----+-------------------+-----+-------------------+
+|                                          | 11  | GND               | 12  | Keypad-DATA       |
++------------------------------------------+-----+-------------------+-----+-------------------+
+
+Interface Pinout(to peripheral)
+---------------------
+
+J3
+****
+
+Common Use: solenoid valves.
+
++------------------------------------------+-----+------------+-----+------------+
+| Interface                                | Pin | Define     | Pin | Define     |   
++==========================================+=====+============+=====+============+
+| .. image:: ../_static/90a0/hub8a/J3.png  | 1   | DC31v      | 2   | Output-08  |
++    :scale: 100 %                         +-----+------------+-----+------------+
+|                                          | 3   | DC31v      | 4   | Output-09  |
++                                          +-----+------------+-----+------------+
+|                                          | 5   | DC31v      | 6   | Output-10  |
++                                          +-----+------------+-----+------------+
+|                                          | 7   | DC31v      | 8   | Output-07  |
++                                          +-----+------------+-----+------------+
+|                                          | 9   | DC31v      | 10  | Output-06  |
++                                          +-----+------------+-----+------------+
+|                                          | 11  | DC31v      | 12  | Output-05  |
++                                          +-----+------------+-----+------------+
+|                                          | 13  | DC31v      | 14  | Output-04  |
++                                          +-----+------------+-----+------------+
+|                                          | 15  |            | 16  |            |
++------------------------------------------+-----+------------+-----+------------+
+
+J6
+****
+
+Common Use: electromagnet.
+
++------------------------------------------+-----+------------+-----+------------+
+| Interface                                | Pin | Define     | Pin | Define     |   
++==========================================+=====+============+=====+============+
+| .. image:: ../_static/90a0/hub8a/J6.png  | 1   | Output-02  | 2   | DC31v      |
++    :scale: 100 %                         +-----+------------+-----+------------+
+|                                          | 3   | Output-01  | 4   | DC31v      |
++                                          +-----+------------+-----+------------+
+|                                          | 5   | Output-03  | 6   | DC31v      |
++------------------------------------------+-----+------------+-----+------------+
+
+J1
+****
+
+Common Use: keypad.
+
++------------------------------------------+-----+--------------------+-----+--------------------+
+| Interface                                | Pin | Define             | Pin | Define             |   
++==========================================+=====+====================+=====+====================+
+| .. image:: ../_static/90a0/hub8a/J1.png  | 1   | VCC                | 2   | Keypad-DATA        |
++    :scale: 100 %                         +-----+--------------------+-----+--------------------+
+|                                          | 3   | GND                | 4   | Keypad-LOCK        |
++                                          +-----+--------------------+-----+--------------------+
+|                                          | 5   |                    | 6   | Keypad-CLK         |
++                                          +-----+--------------------+-----+--------------------+
+|                                          | 7   | Machine ID-SDA     | 8   | Keypad-KEY         |
++                                          +-----+--------------------+-----+--------------------+
+|                                          | 9   | Machine ID-SCL     | 10  | Input-02(digital)  |
++------------------------------------------+-----+--------------------+-----+--------------------+
+
+J2
+****
+
+Common Use: electronic handwheel.
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J2.png  | 1   | GND               |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   | ElecHandWheel-CHA |
++                                          +-----+-------------------+
+|                                          | 3   | ElecHandWheel-CHB |
++                                          +-----+-------------------+
+|                                          | 4   | Input-04(digital) |
++                                          +-----+-------------------+
+|                                          | 5   |                   |
++------------------------------------------+-----+-------------------+
+
+J5
+****
+
+Common Use: automatic speed limit sensor of stroke.
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J5.png  | 1   | VCC               |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   | GND               |
++                                          +-----+-------------------+
+|                                          | 3   | Input-07(analog)  |
++                                          +-----+-------------------+
+|                                          | 4   |                   |
++------------------------------------------+-----+-------------------+
+
+J8
+****
+
+Common Use: knee switch.
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J8.png  | 1   | Input-05(digital) |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   | GND               |
++------------------------------------------+-----+-------------------+
+
+J9
+****
+
+Common Use: lamp, safety sensor(Tilt).
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J9.png  | 1   | VCC               |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   | Input-03(digital) |
++                                          +-----+-------------------+
+|                                          | 3   | GND               |
++------------------------------------------+-----+-------------------+
+
+J4
+****
+
+Common Use: safety sensor(eye guard).
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J4.png  | 1   |                   |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   | Input-06(digital) |
++                                          +-----+-------------------+
+|                                          | 3   | GND               |
++------------------------------------------+-----+-------------------+
+
+J7
+****
+
+Common Use: safety sensor(Hook cover missing).
+
++------------------------------------------+-----+-------------------+
+| Interface                                | Pin | Define            |
++==========================================+=====+===================+
+| .. image:: ../_static/90a0/hub8a/J7.png  | 1   |                   |
++    :scale: 100 %                         +-----+-------------------+
+|                                          | 2   |                   |
++                                          +-----+-------------------+
+|                                          | 3   | Input-01(digital) |
++                                          +-----+-------------------+
+|                                          | 4   | GND               |
++                                          +-----+-------------------+
+|                                          | 5   | DC12v             |
++------------------------------------------+-----+-------------------+
