--- a/docs/product/90a0.rst
+++ b/docs/product/90a0.rst
@@ -244,7 +244,7 @@ Connect to X200.
 +------------------------------------------+-----+------------+-----+------------+
 | Interface                                | Pin | Define     | Pin | Define     |   
 +==========================================+=====+============+=====+============+
-| .. image:: ../_static/90a0/hub8a/J11.png | 1   | Output-04  | 2   | Output-04  |
+| .. image:: ../_static/90a0/hub8A/J11.png | 1   | Output-04  | 2   | Output-04  |
 +    :scale: 100 %                         +-----+------------+-----+------------+
 |                                          | 3   | Output-05  | 4   | Output-05  |
 +                                          +-----+------------+-----+------------+
@@ -267,7 +267,7 @@ Connect to X200.
 +------------------------------------------+-----+------------+-----+------------+
 | Interface                                | Pin | Define     | Pin | Define     |   
 +==========================================+=====+============+=====+============+
-| .. image:: ../_static/90a0/hub8a/J14.png | 1   | DC31v      | 2   | DC31v      |
+| .. image:: ../_static/90a0/hub8A/J14.png | 1   | DC31v      | 2   | DC31v      |
 +    :scale: 100 %                         +-----+------------+-----+------------+
 |                                          | 3   | DC31v      | 4   | DC31v      |
 +                                          +-----+------------+-----+------------+
@@ -288,7 +288,7 @@ Connect to X101.
 +------------------------------------------+-----+-------------------+-----+-------------------+
 | Interface                                | Pin | Define            | Pin | Define            |
 +==========================================+=====+===================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J12.png | 1   | Input-01(digital) | 2   | Input-07(analog)  |
+| .. image:: ../_static/90a0/hub8A/J12.png | 1   | Input-01(digital) | 2   | Input-07(analog)  |
 +    :scale: 100 %                         +-----+-------------------+-----+-------------------+
 |                                          | 3   | Input-10(analog)  | 4   | Input-05(digital) |
 +                                          +-----+-------------------+-----+-------------------+
@@ -311,7 +311,7 @@ Connect to X101.
 +------------------------------------------+-----+-------------------+-----+-------------------+
 | Interface                                | Pin | Define            | Pin | Define            |
 +==========================================+=====+===================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J15.png | 1   | VCC               | 2   | Machine ID-SCL    |
+| .. image:: ../_static/90a0/hub8A/J15.png | 1   | VCC               | 2   | Machine ID-SCL    |
 +    :scale: 100 %                         +-----+-------------------+-----+-------------------+
 |                                          | 3   | Machine ID-SDA    | 4   | Input-02(digital) |
 +                                          +-----+-------------------+-----+-------------------+
@@ -335,7 +335,7 @@ Common Use: solenoid valves.
 +------------------------------------------+-----+------------+-----+------------+
 | Interface                                | Pin | Define     | Pin | Define     |   
 +==========================================+=====+============+=====+============+
-| .. image:: ../_static/90a0/hub8a/J3.png  | 1   | DC31v      | 2   | Output-08  |
+| .. image:: ../_static/90a0/hub8A/J3.png  | 1   | DC31v      | 2   | Output-08  |
 +    :scale: 100 %                         +-----+------------+-----+------------+
 |                                          | 3   | DC31v      | 4   | Output-09  |
 +                                          +-----+------------+-----+------------+
@@ -360,7 +360,7 @@ Common Use: electromagnet.
 +------------------------------------------+-----+------------+-----+------------+
 | Interface                                | Pin | Define     | Pin | Define     |   
 +==========================================+=====+============+=====+============+
-| .. image:: ../_static/90a0/hub8a/J6.png  | 1   | Output-02  | 2   | DC31v      |
+| .. image:: ../_static/90a0/hub8A/J6.png  | 1   | Output-02  | 2   | DC31v      |
 +    :scale: 100 %                         +-----+------------+-----+------------+
 |                                          | 3   | Output-01  | 4   | DC31v      |
 +                                          +-----+------------+-----+------------+
@@ -375,7 +375,7 @@ Common Use: keypad.
 +------------------------------------------+-----+--------------------+-----+--------------------+
 | Interface                                | Pin | Define             | Pin | Define             |   
 +==========================================+=====+====================+=====+====================+
-| .. image:: ../_static/90a0/hub8a/J1.png  | 1   | VCC                | 2   | Keypad-DATA        |
+| .. image:: ../_static/90a0/hub8A/J1.png  | 1   | VCC                | 2   | Keypad-DATA        |
 +    :scale: 100 %                         +-----+--------------------+-----+--------------------+
 |                                          | 3   | GND                | 4   | Keypad-LOCK        |
 +                                          +-----+--------------------+-----+--------------------+
@@ -394,7 +394,7 @@ Common Use: electronic handwheel.
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J2.png  | 1   | GND               |
+| .. image:: ../_static/90a0/hub8A/J2.png  | 1   | GND               |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   | ElecHandWheel-CHA |
 +                                          +-----+-------------------+
@@ -413,7 +413,7 @@ Common Use: automatic speed limit sensor of stroke.
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J5.png  | 1   | VCC               |
+| .. image:: ../_static/90a0/hub8A/J5.png  | 1   | VCC               |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   | GND               |
 +                                          +-----+-------------------+
@@ -430,7 +430,7 @@ Common Use: knee switch.
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J8.png  | 1   | Input-05(digital) |
+| .. image:: ../_static/90a0/hub8A/J8.png  | 1   | Input-05(digital) |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   | GND               |
 +------------------------------------------+-----+-------------------+
@@ -443,7 +443,7 @@ Common Use: lamp, safety sensor(Tilt).
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J9.png  | 1   | VCC               |
+| .. image:: ../_static/90a0/hub8A/J9.png  | 1   | VCC               |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   | Input-03(digital) |
 +                                          +-----+-------------------+
@@ -458,7 +458,7 @@ Common Use: safety sensor(eye guard).
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J4.png  | 1   |                   |
+| .. image:: ../_static/90a0/hub8A/J4.png  | 1   |                   |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   | Input-06(digital) |
 +                                          +-----+-------------------+
@@ -473,7 +473,7 @@ Common Use: safety sensor(Hook cover missing).
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
 +==========================================+=====+===================+
-| .. image:: ../_static/90a0/hub8a/J7.png  | 1   |                   |
+| .. image:: ../_static/90a0/hub8A/J7.png  | 1   |                   |
 +    :scale: 100 %                         +-----+-------------------+
 |                                          | 2   |                   |
 +                                          +-----+-------------------+
