new input mode, code 25; hook cover->slide monitor; eye guard->eye protection

--- a/source/specifications/90a0.rst
+++ b/source/specifications/90a0.rst
@@ -453,7 +453,7 @@ Common Use: lamp, safety sensor(Tilt).
 J4
 ****
 
-Common Use: safety sensor(eye guard).
+Common Use: safety sensor(eye protection).
 
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
@@ -468,7 +468,7 @@ Common Use: safety sensor(eye guard).
 J7
 ****
 
-Common Use: safety sensor(Hook cover missing).
+Common Use: safety sensor(Slide monitoring).
 
 +------------------------------------------+-----+-------------------+
 | Interface                                | Pin | Define            |
