--- a/source/specifications/90a0.rst
+++ b/source/specifications/90a0.rst
@@ -8,7 +8,7 @@ Specifications summary
 ======================
 
 - Independent control box;
-- AC 220v±10%;
+- AC 220v ± 10%;
 - 10 solenoid outputs;
 
 
@@ -74,7 +74,7 @@ Motor encoder.
 PANEL
 *****
 
-Panel。
+Panel.
 
 +--------------------------------------+-----+------------+
 | Interface                            | Pin | Define     |
